# kef

./: .gitignore  README.md  dtts_bot.py  magnets.json  main.py  plan.md  pyproject.toml
research/watchy/: AGENTS.md  README.md  architecture.md  builder.py  package-lock.json  package.json
research/watchy/src/main/: index.js
research/watchy/src/main/services/: posters.js  vlc.js
research/watchy/src/preload/: index.js
research/watchy/src/renderer/: index.html
research/watchy/src/renderer/src/: App.jsx
research/watchy/src/renderer/src/components/: FileUserInterface.jsx  Library.jsx  ResultCard.jsx  SearchBar.jsx
